...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EkQ-uE-BYf">
                                <rect key="frame" x="30" y="134" width="354" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="Password"/>
...
                                <rect key="frame" x="30" y="238" width="354" height="60"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignIn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="SFt-J4-4RH"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kh6-Op-ZZX">
                                <rect key="frame" x="30" y="60" width="354" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="ID">
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Calculate">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Q1k-yL-Lhg">
                                <rect key="frame" x="120" y="134" width="264" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="Interest">
                                    <accessibilityTraits key="traits" none="YES"/>
                                </accessibility>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Capital" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EwR-eg-ltz">
                                <rect key="frame" x="30" y="60" width="60" height="44"/>
                                <constraints>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Calcaulate Balance" id="D1H-6a-ZaW">
                        <barButtonItem key="rightBarButtonItem" title="SignOut" id="OrZ-1t-KcP">
                            <connections>
                                <action selector="toogleSignOut:" destination="wmC-PZ-0Y9" id="1Dk-qe-3UX"/>
...
